--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header class="reel-header">
       <button class="header-btn debug"><i class="bi bi-play-btn"></i></button>
       <nav class="header-navbar debug">
-          <ul>
+        <ul>
           <li><a href="#">Esplora</a></li>
           <li><a href="#">Seguiti</a></li>
           <li><a href="#">Per te</a></li>
@@ -36,8 +36,25 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
-
+      <button class="profile-btn"></button>
+      <div>
+        <button><i class="bi bi-heart-fill"></i></button>
+        <span>588</span>
+      </div>
+      <div>
+        <button><i class="bi bi-chat-dots-fill"></i></button>
+        <span>13</span>
+      </div>
+      <div>
+        <button><i class="bi bi-bookmark-fill"></i></button>
+        <span>638</span>
+      </div>
+      <div>
+        <button><i class="bi bi-arrow-up-right-square-fill"></i></button>
+        <span>491</span>
+      </div>
     </div>
+
     <!-- Footer -->
     <footer>
 
