added more style and bonus

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
         <span class="btn-stat">491</span>
       </div>
     </div>
-
     <!-- Footer -->
     <footer>
       <section class="description">
@@ -60,22 +59,22 @@
       </section>
       <nav>
         <ul class="footer-nav">
-          <li>
+          <li class="nav-item home">
             <a href="#"><i class="bi bi-house-fill"></i></a>
             <span>Home</span>
           </li>
-          <li>
+          <li class="nav-item friends">
             <a href="#"><i class="bi bi-people"></i></a>
             <span>Amici</span>
           </li>
-          <li>
+          <li class="nav-item add">
             <a href="#"><div class="add-square">+</div></a>
           </li>
-          <li>
+          <li class="nav-item mail">
             <a href="#"><i class="bi bi-chat-square"></i></a>
             <span>Posta in arrivo</span>
           </li>
-          <li>
+          <li class="nav-item profile">
             <a href="#"><i class="bi bi-person"></i></a>
             <span>Profilo</span>
           </li>
