description sect moved out of footer + extras

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <!-- Header -->
     <header class="reel-header">
       <button class="header-btn"><i class="bi bi-play-btn"></i></button>
-      <nav class="header-navbar">
-        <ul>
+      <nav class="header-nav">
+        <ul class="header-menu">
           <li><a href="#">Esplora</a></li>
           <li><a href="#">Seguiti</a></li>
           <li><a href="#">Per te</a></li>
@@ -51,12 +51,13 @@
         <span class="btn-stat">491</span>
       </div>
     </div>
+    <!-- Description -->
+    <section class="description">
+      <h4 class="publisher">boolean.careers</h4>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni facilis... <b>Vedi altro</b></p>
+    </section>
     <!-- Footer -->
     <footer>
-      <section class="description">
-        <h4 class="publisher">boolean.careers</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni facilis... <b>Vedi altro</b></p>
-      </section>
       <nav>
         <ul class="footer-nav">
           <li class="nav-item home">
